overflow bug fixed in explorer

--- a/frontend/src/main/css/explorer.sass
+++ b/frontend/src/main/css/explorer.sass
@@ -13,3 +13,6 @@
     canvas
       width: 100%
       height: 100%
+
+  .buttons
+    overflow: hidden
